[gd_scene load_steps=3 format=3 uid="uid://br7k5ok35dul"]

[ext_resource type="Script" path="res://scenes/main_screen.gd" id="1_bsl3f"]

[sub_resource type="Theme" id="Theme_o1nkj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsl3f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -121.0
offset_right = 115.0
offset_bottom = -20.0
grow_vertical = 0

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_o1nkj")
theme_override_colors/font_color = Color(0.860369, 0.860369, 0.860369, 1)
theme_override_font_sizes/font_size = 50
text = "New Game"
flat = true

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Load Game"
flat = true

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -11.5
offset_right = 74.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Just a game where you can save n load. "
